objects/Ask__c.object
<CustomObject>
    <description>Fundraising &apos;asks&apos; for money</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asks</relationshipLabel>
        <relationshipName>Asks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountancy_places__c</fullName>
        <label># Accountancy places</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_requested__c</fullName>
        <description>£ amount requested in Ask</description>
        <inlineHelpText>£ amount requested in Ask</inlineHelpText>
        <label>Amount requested</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BSS_Roles__c</fullName>
        <label>BSS Roles</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSS_places__c</fullName>
        <label># BSS places</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith and Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
                <value>
                    <fullName>Merton</fullName>
                </value>
                <value>
                    <fullName>Newham</fullName>
                </value>
                <value>
                    <fullName>Redbridge</fullName>
                </value>
                <value>
                    <fullName>Richmond upon Thames</fullName>
                </value>
                <value>
                    <fullName>Southwark</fullName>
                </value>
                <value>
                    <fullName>Sutton</fullName>
                </value>
                <value>
                    <fullName>Tower Hamlets</fullName>
                </value>
                <value>
                    <fullName>Waltham Forest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_date__c</fullName>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_of_all_reports_required__c</fullName>
        <description>Roll-up summary of reporting requirements, as per the child object</description>
        <inlineHelpText>This field automatically counts how many reports are required, as specified in the &apos;Reporting&apos; section below</inlineHelpText>
        <label>Count of all reports required</label>
        <summaryForeignKey>Reporting__c.Ask__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_answer_expected__c</fullName>
        <description>Date their answer is expected</description>
        <inlineHelpText>Date their answer is expected</inlineHelpText>
        <label>Date answer expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_answer_given__c</fullName>
        <description>The date of their response to our ask</description>
        <inlineHelpText>The date of their response to our ask</inlineHelpText>
        <label>Date answer given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_application_is_due__c</fullName>
        <description>The funder&apos;s submission date for the application</description>
        <inlineHelpText>The funder&apos;s submission date for the application</inlineHelpText>
        <label>Date application is due (funder)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_application_is_due_internal__c</fullName>
        <description>The internal deadline date for the application</description>
        <inlineHelpText>The internal deadline date for the application</inlineHelpText>
        <label>Date application is due (internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_application_submitted__c</fullName>
        <inlineHelpText>Date application was submitted</inlineHelpText>
        <label>Date application submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_reapplication__c</fullName>
        <description>The date when we can apply again</description>
        <inlineHelpText>The date when we can apply again</inlineHelpText>
        <label>Date for reapplication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_at_Stage_0__c</fullName>
        <formula>IF(ISNULL( Stage_1_date__c ) , TODAY() - Stage_0_date__c, Stage_1_date__c - Stage_0_date__c)</formula>
        <label>Days at Stage 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Stage_1__c</fullName>
        <formula>IF(ISNULL( Stage_2_date__c ) , TODAY() - Stage_1_date__c, Stage_2_date__c - Stage_1_date__c)</formula>
        <label>Days at Stage 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Stage_2__c</fullName>
        <formula>IF(ISNULL( Stage_3_date__c ) , TODAY() - Stage_2_date__c, Stage_3_date__c - Stage_2_date__c)</formula>
        <label>Days at Stage 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_current_stage__c</fullName>
        <description>Formula, calculating the number of days that an Ask has been at a given stage. Refers to the text version of the Stage position field, and then accordingly displays the relevant number of days for that stage.</description>
        <formula>IF( Stage_position_text__c = &quot;Stage 0&quot;,  Days_at_Stage_0__c , IF( Stage_position_text__c = &quot;Stage 1&quot;,  Days_at_Stage_1__c , IF( Stage_position_text__c = &quot;Stage 2&quot;,  Days_at_Stage_2__c , IF( Stage_position_text__c = &quot;Stage 3&quot;,  Days_at_Stage_3__c , IF( Stage_position_text__c = &quot;Stage 4&quot;,  Days_at_Stage_4__c , IF( Stage_position_text__c = &quot;Stage 5&quot;,  Days_at_Stage_5__c , IF( Stage_position_text__c = &quot;Stage 6&quot;,  Days_at_Stage_6__c , IF( Stage_position_text__c = &quot;Stage 7&quot;,  Days_at_Stage_7__c , IF( Stage_position_text__c = &quot;On hold&quot;,   Days_on_hold__c , IF( Stage_position_text__c = &quot;Closed&quot;,   Days_since_closed__c , NULL))))))))))</formula>
        <inlineHelpText>The number of days that the Ask has been at its current stage. The information is automatically calculated.</inlineHelpText>
        <label>Days at current stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_on_hold__c</fullName>
        <formula>IF(NOT(ISNULL( Hold_date__c ) ) , TODAY() -  Hold_date__c , NULL)</formula>
        <label>Days on hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_closed__c</fullName>
        <formula>IF(NOT(ISNULL( Close_date__c ) ) , TODAY() - Close_date__c, NULL)</formula>
        <label>Days since closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Next_Step__c</fullName>
        <label>Deadline for Next Step</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_other_relationship_type__c</fullName>
        <label>Details of other relationship type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_engagement__c</fullName>
        <label>Employee engagement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_Learners_been_placed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have Learners been placed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_we_met_with_the_Head_Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have we met with the Head Teacher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_we_met_with_the_head_of_year_13__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have we met with the head of year 13?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_date__c</fullName>
        <label>Hold date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the key Contact</description>
        <inlineHelpText>Link to the key Contact</inlineHelpText>
        <label>Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asks</relationshipLabel>
        <relationshipName>Asks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learner_Details__c</fullName>
        <label>Learner Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <description>Percentage likelihood that the Ask will be successful</description>
        <inlineHelpText>Percentage likelihood that the Ask will be successful</inlineHelpText>
        <label>Likelihood %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asks (Main Contact)</relationshipLabel>
        <relationshipName>Asks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_booked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_steps__c</fullName>
        <description>Text field for capturing the next steps</description>
        <inlineHelpText>What are the next steps?</inlineHelpText>
        <label>Next steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Overview of the Ask</description>
        <inlineHelpText>Overview of the Ask</inlineHelpText>
        <label>Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quality_control_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality control completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reapplication_due_with_60_days__c</fullName>
        <formula>IF( Date_for_reapplication__c  &lt;= (TODAY()+60) , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>Reapplication due with 60 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_rejection__c</fullName>
        <label>Reason for rejection or not applying</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_type__c</fullName>
        <label>Relationship type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COTY</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the internal user that looks after the Ask</description>
        <label>SF Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Sciences/numbers</fullName>
                </value>
                <value>
                    <fullName>People/communicates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_0_date__c</fullName>
        <label>Stage 0: Identified: date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1_date__c</fullName>
        <label>Stage 1: Researching: date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_2_date__c</fullName>
        <label>Stage 2: Contacted: date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_position__c</fullName>
        <formula>IF(NOT(ISBLANK(Close_date__c) ) , &quot;Closed&quot;, IF(NOT(ISBLANK( Hold_date__c ) ) , &quot;On hold&quot;, IF(NOT(ISBLANK( Stage_7_date__c ) ) , &quot;Stage 7&quot;, IF(ISBLANK( Stage_7_date__c )  &amp;&amp; NOT(ISBLANK( Stage_6_date__c )) , &quot;Stage 6&quot;, IF(ISBLANK( Stage_6_date__c )  &amp;&amp; NOT(ISBLANK( Stage_5_date__c )) , &quot;Stage 5&quot;, IF(ISBLANK( Stage_5_date__c )  &amp;&amp; NOT(ISBLANK( Stage_4_date__c )) , &quot;Stage 4&quot;, IF(ISBLANK( Stage_4_date__c )  &amp;&amp; NOT(ISBLANK( Stage_3_date__c )) , &quot;Stage 3&quot;, IF(ISBLANK( Stage_3_date__c )  &amp;&amp; NOT(ISBLANK( Stage_2_date__c )) , &quot;Stage 2&quot;, IF(ISBLANK( Stage_2_date__c )  &amp;&amp; NOT(ISBLANK( Stage_1_date__c )) , &quot;Stage 1&quot;, IF(ISBLANK( Stage_1_date__c )  &amp;&amp; NOT(ISBLANK( Stage_0_date__c )) , &quot;Stage 0&quot;, NULL) ) ) ) )) ) )  ) )</formula>
        <inlineHelpText>Stage the Ask is at (calculated from the date fields)</inlineHelpText>
        <label>Stage position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_position_text__c</fullName>
        <label>Stage position text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_2013_14__c</fullName>
        <label>Status 2013/14</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial letter sent out</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked</fullName>
                </value>
                <value>
                    <fullName>Meeting Completed</fullName>
                </value>
                <value>
                    <fullName>Assembly Booked</fullName>
                </value>
                <value>
                    <fullName>Assembly Done</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Unable to get through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Decided not to apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_spent_by_lead__c</fullName>
        <description>Time (in hours) spent on Ask by lead</description>
        <inlineHelpText>Time (in hours) spent on Ask by lead</inlineHelpText>
        <label>Time spent by lead</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_spent_by_other_s__c</fullName>
        <description>Time (in hours) spent on the Ask by those who are not the lead</description>
        <inlineHelpText>Time (in hours) spent on the Ask by those who are not the lead</inlineHelpText>
        <label>Time spent by other/s</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amount_s_committed__c</fullName>
        <inlineHelpText>Sum of amounts committed to TCN in Amounts</inlineHelpText>
        <label>Total amount(s) committed</label>
        <summarizedField>Amount__c.Amount_committed__c</summarizedField>
        <summaryForeignKey>Amount__c.Ask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amount_s_received__c</fullName>
        <inlineHelpText>The total amounts received in Amount, when the money has actually been received by TCN (i.e. &apos;Date amount received&apos; is not blank)</inlineHelpText>
        <label>Total amount(s) received</label>
        <summarizedField>Amount__c.Amount_committed__c</summarizedField>
        <summaryFilterItems>
            <field>Amount__c.Date_amount_received__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Amount__c.Ask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Statutory</fullName>
                </value>
                <value>
                    <fullName>Lottery</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vacancy_form_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ONnly tick this box when VRF and Contract are uploaded to the Ask</inlineHelpText>
        <label>Employer Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vacancy_form_sent_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacancy form sent out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_ask__c</fullName>
        <description>£ amount requested, multiplied by the percentage likelihood that the Ask will be successful</description>
        <formula>Amount_requested__c    * Likelihood__c</formula>
        <inlineHelpText>The weighted ask is the sum amount requested, multiplied by the percentage likelihood that the Ask will be successful</inlineHelpText>
        <label>Weighted ask</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_of_desired_receipt__c</fullName>
        <label>Year of desired receipt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009-10</fullName>
                </value>
                <value>
                    <fullName>2010-11</fullName>
                </value>
                <value>
                    <fullName>2011-12</fullName>
                </value>
                <value>
                    <fullName>2012-13</fullName>
                </value>
                <value>
                    <fullName>2013-14</fullName>
                </value>
                <value>
                    <fullName>2014-15</fullName>
                </value>
                <value>
                    <fullName>2015-16</fullName>
                </value>
                <value>
                    <fullName>2016-17</fullName>
                </value>
                <value>
                    <fullName>2017-18</fullName>
                </value>
                <value>
                    <fullName>2018-19</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Youthwork_places__c</fullName>
        <label># Youthwork places</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ask</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>Account__c</columns>
        <columns>Amount_requested__c</columns>
        <columns>Weighted_ask__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Grant_Statutory</value>
        </filters>
        <label>Grants all</label>
    </listViews>
    <listViews>
        <fullName>All_JOM</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All JOM</label>
    </listViews>
    <listViews>
        <fullName>Corporate_all</fullName>
        <columns>Stage_position__c</columns>
        <columns>NAME</columns>
        <columns>Amount_requested__c</columns>
        <columns>Account__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>Total_amount_s_committed__c</columns>
        <columns>Weighted_ask__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Corporate</value>
        </filters>
        <label>Corporate all</label>
        <sharedTo>
            <group>Fundraising_all</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corporate_pending_proposals</fullName>
        <columns>Stage_position__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount_requested__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>Total_amount_s_committed__c</columns>
        <columns>Weighted_ask__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Corporate</value>
        </filters>
        <filters>
            <field>Stage_position__c</field>
            <operation>equals</operation>
            <value>Stage 4</value>
        </filters>
        <label>Corporate pending proposals</label>
    </listViews>
    <listViews>
        <fullName>Culinary_Challenge</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Stage_position__c</columns>
        <columns>Key_Contact__c</columns>
        <columns>Next_steps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Corporate</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Culinary</value>
        </filters>
        <label>Culinary Challenge</label>
        <sharedTo>
            <group>Fundraising_all</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DJB_All_Apps</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Total_amount_s_committed__c</columns>
        <columns>Total_amount_s_received__c</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Mine</filterScope>
        <label>DJB All Apps</label>
    </listViews>
    <listViews>
        <fullName>DJB_Awaiting_Response</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Date_application_submitted__c</columns>
        <columns>Amount_requested__c</columns>
        <columns>Likelihood__c</columns>
        <columns>Weighted_ask__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Applied</value>
        </filters>
        <label>DJB Awaiting Response</label>
    </listViews>
    <listViews>
        <fullName>DJB_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_requested__c</columns>
        <columns>Date_answer_given__c</columns>
        <columns>Date_for_reapplication__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>DJB Rejected</label>
    </listViews>
    <listViews>
        <fullName>Grant_Applications_Planned</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_requested__c</columns>
        <columns>Date_application_is_due__c</columns>
        <columns>Date_application_submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Grant_Statutory</value>
        </filters>
        <filters>
            <field>Date_application_is_due__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2012</value>
        </filters>
        <label>Grant Applications Planned</label>
    </listViews>
    <listViews>
        <fullName>Grant_Making_Bodies</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Amount_requested__c</columns>
        <columns>Date_application_is_due_internal__c</columns>
        <columns>Date_application_is_due__c</columns>
        <columns>Next_Step__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned,Committed</value>
        </filters>
        <label>DJB Ongoing Apps</label>
    </listViews>
    <listViews>
        <fullName>Grants_all</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>Amount_requested__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Grant_Statutory</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Grants Planned</label>
    </listViews>
    <listViews>
        <fullName>Grants_all1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Amount_requested__c</columns>
        <columns>Date_answer_expected__c</columns>
        <columns>Weighted_ask__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Grant_Statutory</value>
        </filters>
        <filters>
            <field>Date_application_submitted__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2012</value>
        </filters>
        <filters>
            <field>Date_answer_given__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>Grants - applications pending</label>
    </listViews>
    <listViews>
        <fullName>Potential_Business_for_Fast_Track</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Next_steps__c</columns>
        <columns>Overview__c</columns>
        <columns>Key_Contact__c</columns>
        <columns>Stage_position__c</columns>
        <columns>Days_at_current_stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ask__c.Corporate</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>HeadStart</value>
        </filters>
        <label>Potential Business for HeadStart</label>
        <sharedTo>
            <group>TCS</group>
        </sharedTo>
    </listViews>
</CustomObject>